[gd_scene load_steps=6 format=3 uid="uid://clmw3875hyui0"]

[ext_resource type="Script" uid="uid://b3330gr7obnvr" path="res://scenes/upgrade_menu.gd" id="1_0e30j"]
[ext_resource type="Script" uid="uid://bvlrvl4ne6xj6" path="res://scripts/button.gd" id="1_e3qxy"]
[ext_resource type="FontFile" uid="uid://b8tnrbyw6v3i2" path="res://art/pixel2.ttf" id="1_ksfom"]
[ext_resource type="AudioStream" uid="uid://6enlwfh2mi4i" path="res://audio/UI Accept 005.wav" id="4_6vqdt"]
[ext_resource type="AudioStream" uid="uid://dlp8yim8wur0f" path="res://audio/UI Accept 006.wav" id="5_ixicc"]

[node name="UpgradeMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0e30j")

[node name="Panel" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -20.0
offset_right = 136.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Upgrade1" type="Button" parent="Panel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ksfom")
theme_override_font_sizes/font_size = 32
text = "Paddle Size"
script = ExtResource("1_e3qxy")

[node name="Upgrade2" type="Button" parent="Panel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ksfom")
theme_override_font_sizes/font_size = 32
text = "Ball Size"
script = ExtResource("1_e3qxy")

[node name="Upgrade3" type="Button" parent="Panel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ksfom")
theme_override_font_sizes/font_size = 32
text = "Extra Ball"
script = ExtResource("1_e3qxy")

[node name="HoverSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_6vqdt")

[node name="ClickSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ixicc")
